# Paradox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Paradox/: CMakeLists.txt
Paradox/src/: Paradox.h  pxpch.cpp  pxpch.h
Paradox/src/Paradox/: Core.h  PlatformDetection.h  Test.cpp  Test.h
Paradox/src/Paradox/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Log.cpp  Log.h  PlatformDetection.h  Version.h  Window.cpp  Window.h
Paradox/src/Paradox/Events/: ApplicationEvents.h  Event.h
Paradox/src/Paradox/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Paradox/src/Paradox/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Paradox/src/Paradox/Renderer/: Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  VertexBuffer.cpp  VertexBuffer.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Application.cpp  SandboxApp.cpp
WorkingDirectories/Sandbox/shaders/: CompileShaders.sh  shader.vert
scripts/: GenProjects.sh
